# CAN_Pico_PIO

./: CMakeLists.txt  can.c  can.pio
CAN_RX/: CMakeLists.txt  can_rx.c  can_rx.pio
CAN_TX/: CMakeLists.txt  can_tx.c  can_tx.pio
